--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			flex-direction: row;
 		}
 		#box3 img{
-			width: 384px;
+			width: 33.3%;
 			height: 216px;
 			margin: 5px;
 			opacity: 0.5;
