--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			color: white;
 		}
 		#box3{
-			width: 85%;
+			width: 90%;
 			height: 216px;
 			background-color: #232323;
 			display: flex;
@@ -255,9 +255,9 @@
     <div id="4th"></div>
     <div class="container">
     	<div id="box3">
-    		<img src="tea1.jpeg">
-    		<img src="tea2.jpeg">
-    		<img src="tea3.jpeg">
+    		<img src="tea1.jpg">
+    		<img src="tea2.jpg">
+    		<img src="tea3.jpg">
     	</div>
     	<div id="box4">
     		<p>And my ultimate adoration of black tea.</p>
